@startuml
'https://plantuml.com/class-diagram

abstract class Vay{
    String tennguoiduyet,chucvu
    int sotien
    +abstract vay vayketiep(vay ketiep)
    +abstract void xuly(int sotienvay)
}
class chucvuthongthuong
class chucvucuoicung
Vay <|---chucvuthongthuong
Vay <|---chucvucuoicung
chucvuthongthuong-->Vay:ketiep

@enduml